# The_agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.webhook  Dockerfile.worker  docker-compose.yml  entrypoint.sh  mcp_servers.json  pyproject.toml  railway.toml
dashboard/: .env.example  auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/(dashboard)/: layout.tsx  page.tsx
dashboard/app/actions/: page.tsx
dashboard/app/analytics/: page.tsx
dashboard/app/knowledge/: page.tsx
dashboard/app/login/: page.tsx
dashboard/components/: ActionCard.tsx  ChatPanel.tsx  DraftRefineModal.tsx  EditModal.tsx  EmptyState.tsx  StatusBar.tsx
dashboard/lib/: api.ts  types.ts
docs/plans/: 2026-02-20-intelligence-upgrade-design.md  2026-02-20-intelligence-upgrade-plan.md
migrations/: 001_initial_schema.sql  002_add_vector_columns.sql  003_dynamic_tools.sql  004_intelligence.sql  005_sessions.sql  migrate.py
scripts/: get_google_token.py  seed_knowledge.py  setup_google_apis.md
src/agent1/: __init__.py
src/agent1/common/: db.py  (+6 more)
tests/: conftest.py  test_admin_proposals.py  test_analytics_engine.py  test_classifier.py  test_context_engine.py  test_feedback_intel.py  test_feedbacks_poller.py  test_feedbacks_tools.py  test_guardrails.py  test_integrations.py  test_mcp.py  test_models.py  test_proposals.py  test_providers.py  test_script_runner.py  test_webhook_routes.py
tests/unit/: test_models.py  test_queue.py  test_router.py  test_sessions.py
(+91 files in other folders)
